--- a/apps/web-giddh/src/app/theme/ngx-date-range-picker/ngx-daterangepicker.component.scss
+++ b/apps/web-giddh/src/app/theme/ngx-date-range-picker/ngx-daterangepicker.component.scss
@@ -1601,7 +1601,7 @@ td span {
         top: 10px;
     }
     perfect-scrollbar{
-        max-height: 90% !important;
+        max-height: 470px !important;
         height: calc(100% - 100px) !important;
     } 
 
